--- a/src/components/Exercise/Exercise.css
+++ b/src/components/Exercise/Exercise.css
@@ -4,9 +4,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 50px 50px 50px 50px;
+    margin: 40px;
     position: relative;
-    height: 350px;
+    height: 370px;
     background-color: #FFFFFF   ;
 }
 
@@ -24,6 +24,10 @@
     position: absolute;
     bottom: 0;
     color: white;
+}
+
+.btn-list p{
+    font-size: 15px;
 }
 
 .btn-list:hover{
